cleaned up use cases